glide (2002.04.10ds1-17) UNRELEASED; urgency=medium

  * Switch debhelper compatibility level to 13.
  * Switch to Standards-Version 4.6.1 (no changes needed).
  * Remove unused X11 includes, shared library linking and build dependencies.

 -- Guillem Jover <guillem@debian.org>  Wed, 09 Sep 2020 03:47:34 +0200

glide (2002.04.10ds1-16) unstable; urgency=medium

  * Bump debhelper compatibility level to 12.
  * Switch from debian/compat to debhelper-compat Build-Depends.
  * Update copyright years.
  * Remove no longer needed debhelper .dirs fragment files.
  * Bump Standards-Version to 4.5.0 (no changes needed).
  * Reformat license in debian/copyright to remove TABs and reduce spaces.
  * Update lintian-overrides for renamed tags.
  * Update debconf POT and po files, after removal of libglide2 packages.

 -- Guillem Jover <guillem@debian.org>  Sun, 22 Mar 2020 04:17:20 +0100

glide (2002.04.10ds1-15) unstable; urgency=medium

  * Remove glide2x packages. These either support cards supported already
    by glide3x, or cards so old that they need an actual 2D video card.
  * Add spaces around make variable assignments in debian/rules.
  * Bump Standards-Version to 4.3.0 (no changes needed).
  * Wrap multi-line field values to the next lines in debian/copyright.

 -- Guillem Jover <guillem@debian.org>  Tue, 26 Feb 2019 04:13:53 +0100

glide (2002.04.10ds1-14) unstable; urgency=medium

  * Sort fields in debian/control and debian/copyright.
  * Do not consider dollar signs as part of the symbol names in assembler
    code, thus getting rid of non-existing unresolvable inserted symbols.
    (Closes: #908955)
    - debian/patches/glide3x-link-unresolved: Update patch.
    - debian/patches/z12-local-libtool: Likewise.
  * Fix installation permissions to always set write rights for the owner, so
    that we can build without root, as fakeroot was shadowing these issues.
    - debian/patches/z13-install-perms: New patch.
  * Set R³ to no.